--- a/.github/workflows/CD_QA_Workflow.yml
+++ b/.github/workflows/CD_QA_Workflow.yml
@@ -20,7 +20,7 @@ jobs:
           touch .env
           echo APP_SECRET=${{ secrets.QA_APP_SECRET }} >> .env
           echo MONGODB_URI=${{ secrets.QA_CUSTOMER_DB_URL }} >> .env
-          echo MSG_QUEUE_URL=${{ secrets.QA_MSG_QUEUE_URL }} >> .env
+          echo MSG_BROKER_URL=${{ secrets.QA_MSG_BROKER_URL }} >> .env
           echo EXCHANGE_NAME=ONLINE_STORE >> .env
           echo PORT=8001 >> .env
           cat .env
@@ -31,7 +31,7 @@ jobs:
           touch .env
           echo APP_SECRET=${{ secrets.QA_APP_SECRET }} >> .env
           echo MONGODB_URI=${{ secrets.QA_CUSTOMER_DB_URL }} >> .env
-          echo MSG_QUEUE_URL=${{ secrets.QA_MSG_QUEUE_URL }} >> .env
+          echo MSG_BROKER_URL=${{ secrets.QA_MSG_BROKER_URL }} >> .env
           echo EXCHANGE_NAME=ONLINE_STORE >> .env
           echo PORT=8002 >> .env
           cat .env
@@ -42,7 +42,7 @@ jobs:
           touch .env
           echo APP_SECRET=${{ secrets.QA_APP_SECRET }} >> .env
           echo MONGODB_URI=${{ secrets.QA_SHOPPING_DB_URL }} >> .env
-          echo MSG_QUEUE_URL=${{ secrets.QA_MSG_QUEUE_URL }} >> .env
+          echo MSG_BROKER_URL=${{ secrets.QA_MSG_BROKER_URL }} >> .env
           echo EXCHANGE_NAME=ONLINE_STORE >> .env
           echo PORT=8003 >> .env
           cat .env
