--- a/.github/workflows/CD_QA_Workflow.yml
+++ b/.github/workflows/CD_QA_Workflow.yml
@@ -30,7 +30,7 @@ jobs:
         run: |
           touch .env
           echo APP_SECRET=${{ secrets.QA_APP_SECRET }} >> .env
-          echo MONGODB_URI=${{ secrets.QA_CUSTOMER_DB_URL }} >> .env
+          echo MONGODB_URI=${{ secrets.QA_PRODUCTS_DB_URL }} >> .env
           echo MSG_BROKER_URL=${{ secrets.QA_MSG_BROKER_URL }} >> .env
           echo EXCHANGE_NAME=ONLINE_STORE >> .env
           echo PORT=8002 >> .env
