--- a/.github/workflows/CD_QA_Workflow.yml
+++ b/.github/workflows/CD_QA_Workflow.yml
@@ -59,7 +59,7 @@ jobs:
           application_name: online_shopping
           environment_name: Onlineshopping-env
           version_label: "ver-${{ github.sha }}"
-          region: eu-central-1
+          region: us-east-1
           deployment_package: deploy.zip
 
       
